# airbnb

./: .env-example  .gitignore  README.md  profiles.yml  pyproject.toml
airbnb/: dbt_project.yml
airbnb/analyses/: full_moon_no_sleep.sql
airbnb/macros/: no_empty_strings.sql  no_nulls_in_columns.sql  positive_value.sql
airbnb/models/: schema.yml  sources.yml
airbnb/models/dim/: dim_hosts_cleansed.sql  dim_listings_cleansed.sql  dim_listings_w_hosts.sql
airbnb/models/fct/: fct_reviews.sql
airbnb/models/mart/: full_moon_reviews.sql  mart_fullmoon_reviews.sql
airbnb/models/src/: src_hosts.sql  src_listings.sql  src_reviews.sql
airbnb/snapshots/: scd_raw_hosts.sql  scd_raw_listings.sql
airbnb/tests/: consistent_created_at.sql
airbnb/tests/generic/: minimum_row_count.sql  positive_values.sql
app/: commands_create_structure.sql  commands_drop_structure.sql  main.py
