[project]
name = "airbnb"
version = "0.1.0"
description = "Simulating the life of an Analytics Engineer in Airbnb"
authors = [
    {name = "LuisRicardo",email = "palharini.luis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-snowflake (==1.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
