[project]
name = "airbnb"
version = "0.1.0"
description = "Simulating the life of an Analytics Engineer in Airbnb"
authors = [
    {name = "LuisRicardo",email = "palharini.luis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "dbt-snowflake (==1.9.0)",
    "snowflake-connector-python (>=3.17.3,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
create-snowflake = "python -c 'import app.main; app.main.create_structure()'"
drop-snowflake = "python -c 'import app.main; app.main.drop_structure()'"